--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,46 +1,94 @@
 {% extends "base.html" %}
+{% from "macros.html" import nav_bar_dash, mathquill, katex %}
 
-{% block title %}EduAce Login{% endblock %}
+{% block title %}EduAce Quiz{% endblock %}
 
 {% block body %}
 
-    <a href="/" class="text-white">back...</a>
+    <!-- Static Desktop Sidebar -->
+    <div class="col-md-1 sidebar">
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-    <div class="card mx-auto" style="width: 36rem;">
-        <div class="card-header text-center h3">Login Here:</div>
-        <div class="card-body">
-            <form method="POST">
-                {% if failure == "unconfirmed"  %} <p class="text text-danger"> Your email address has not been confirmed.</p> <br> {% endif %}
-                {% if failure == "confirmed"  %} <p class="text text-success"> Your email address has been confirmed.</p> <br> {% endif %}
-
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">Username: </span>
-                    </div>
-                    <input class="form-control {% if failure == "username" or failure == "unconfirmed" %}is-invalid{% endif %}" name="username" type="text" required>
-                    {% if failure == "username" %}
-                    <div class="invalid-feedback">
-                        Invalid username.
-                    </div>
-                    {% endif %}
-                </div>
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" >Password: </span>
-                    </div>
-                    <input class="form-control {% if failure == "password" %}is-invalid{% endif %}  }" type="password" name="password" type="text" required>
-                    {% if failure == "password" %}
-                    <div class="invalid-feedback">
-                        Invalid password.
-                    </div>
-                    {% endif %}
-                </div>
-                <br>
-                <button class="btn">Submit</button>
-            </form>
+        <!-- Logo Row -->
+        <div class="sidebar-div text-center">
+            <img class="sidebar-image" src="{{ url_for('static', filename='logo.png') }}">
         </div>
+
     </div>
+
+    <!-- spacer -->
+    <div class="col-md-1"></div>
+
+    <!-- Probably want to centre this -->
+
+    <!-- registration -->
+    <div id="registration-content" class="col-md-9">
+    <br><br><br><br><br><br><br><br>
+        <div class="row">
+
+            <div class="container content-register rounded">
+                <canvas id="register-graph"></canvas>
+
+                <div class="col-md-6">
+                <br>
+
+                <form method="POST">
+                    {% if failure == "unconfirmed"  %} <p class="lead white"> Your email address has not been confirmed.</p> <br> {% endif %}
+                    {% if failure == "confirmed"  %} <p class="lead white"> Your email address has been confirmed.</p> <br> {% endif %}
+                    {% if failure == "password" %} <div class="lead white"> Invalid password. </div> <br> {% endif %}
+                    {% if failure == "username" %} <div class="lead white"> Invalid username. </div> <br> {% endif %}
+
+                    <div class="input-group mb-3">
+                        <input class="form-control {% if failure == "username" or failure == "unconfirmed" %}is-invalid{% endif %}" name="username" type="text" placeholder="Username" required>
+                    </div>
+
+                    <div class="input-group">
+                        <input class="form-control {% if failure == "password" %}is-invalid{% endif %}  }" type="password" name="password" type="text" placeholder="Password" required>
+                    </div>
+
+                    <br>
+
+                    <button class="btn btn-outline-light">Login</button>
+            </form>
+
+                </div>
+
+            </div>
+
+        </div
+    </div>
+
+    <script>
+        var ctx0 = document.getElementById('register-graph').getContext("2d")
+
+        var gradientFill = ctx0.createLinearGradient(0,0,0,170);
+        gradientFill.addColorStop(1, "rgba(231, 115, 233, 1)");
+        gradientFill.addColorStop(0, "rgba(133, 104, 243, 0.5)");
+
+        var myChart0 = new Chart(ctx0, {
+            responsive: true,
+            type: 'line',
+            data: {
+                labels: [6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24],
+                datasets: [{
+                    borderColor:            "rgba(0,0,0,0)",
+                    fill:                   true,
+                    backgroundColor:        gradientFill,
+                    data:                   [0,0,0,0,0,0,0,0, 1, 2, 3, 4, 5, 4, 5, 7, 6, 7, 6, 7] },
+                    {
+                    borderColor:            "rgba(0,0,0,0)",
+                    fill:                   true,
+                    backgroundColor:        gradientFill,
+                    data:                   [0,0,0,0,0,0, 1, 3, 4, 5, 7,8,6,5,2,1,2,1, 2, 0] },
+                ]
+            },
+            options: {
+                legend:                 { display: false},
+                scales:                 { yAxes: [{ display: false }], xAxes: [{ display: false }]},
+                elements:               { point: { radius: 0 } },
+                maintainAspectRatio:    false,
+            }
+        });
+    </script>
+
 
 {% endblock %}
