--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,62 +1,98 @@
 {% extends "base.html" %}
+{% from "macros.html" import nav_bar_dash, mathquill, katex %}
 
-{% block title %}EduAce Registration{% endblock %}
+{% block title %}EduAce Quiz{% endblock %}
 
 {% block body %}
 
-<div class="container">
+    <!-- Static Desktop Sidebar -->
+    <div class="col-md-1 sidebar">
 
-    <div class="row">
-
-        <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3" style="background-color: white;">
-            <br><br>
-            <form role="form" method="POST" action="/register">
-
-                <h2>Sign up for a free account here...</h2>
-
-                <p {% if error == "" %}style="display: none"{% endif %} class="text alert alert-danger">{{ error }}</p>
-
-                <div class="form-group">
-				    <input type="text" name="username" id="username" class="form-control input-lg" placeholder="Username" tabindex="3">
-			    </div>
-
-                <div class="form-group">
-				    <input type="text" name="email" id="email" class="form-control input-lg" placeholder="Email Address" tabindex="3">
-			    </div>
-
-                <div class="row">
-				    <div class="col-xs-12 col-sm-6 col-md-6">
-				    	<div class="form-group">
-				    		<input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password" tabindex="5">
-				    	</div>
-				    </div>
-				    <div class="col-xs-12 col-sm-6 col-md-6">
-				    	<div class="form-group">
-				    		<input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-lg" placeholder="Confirm Password" tabindex="6">
-                        </div>
-				    </div>
-			    </div>
-
-                <br>
-
-                <div>
-					 By clicking <strong class="label label-primary">Register</strong>, you agree to the <a href="#" data-toggle="modal" data-target="#t_and_c_m">Terms and Conditions</a> set out by this site, including our Cookie Use.
-				</div>
-
-                <br><br>
-
-                <div class="row">
-                    <div class="col-xs-12 col-md-6"><a href="/" class="btn btn-success btn-block btn-lg">Back</a></div>
-				    <div class="col-xs-12 col-md-6"><input type="submit" value="Register" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
-			    </div>
-
-            </form>
-            <br><br>
-
+        <!-- Logo Row -->
+        <div class="sidebar-div text-center">
+            <img class="sidebar-image" src="{{ url_for('static', filename='logo.png') }}">
         </div>
 
     </div>
 
-</div>
+    <!-- spacer -->
+    <div class="col-md-1"></div>
+
+    <!-- Probably want to centre this -->
+
+    <!-- registration -->
+    <div id="registration-content" class="col-md-9">
+    <br><br><br><br><br><br><br><br>
+        <div class="row">
+
+            <div class="container content-register rounded">
+                <canvas id="register-graph"></canvas>
+
+                <div class="col-md-6">
+                <br>
+
+                    <form role="form" method="POST" action="/register">
+                        {% if error != "" %} <script>alert('{{ error }}')</script> {% endif %}
+
+                        <p class="lead">Registration</p>
+
+                        <div class="form-group">
+				            <input type="text" name="username" id="username" class="form-control input-lg" placeholder="Username" tabindex="3">
+			            </div>
+
+                        <div class="form-group">
+				            <input type="text" name="email" id="email" class="form-control input-lg" placeholder="Email Address" tabindex="3">
+			            </div>
+
+                        <div class="form-group">
+				    		<input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password" tabindex="5">
+				    	</div>
+
+                        <input type="submit" value="Register" class="btn btn-outline-light" tabindex="7">
+
+                        <br>
+
+                    </form>
+
+                </div>
+
+            </div>
+
+        </div
+    </div>
+
+    <script>
+        var ctx0 = document.getElementById('register-graph').getContext("2d")
+
+        var gradientFill = ctx0.createLinearGradient(0,0,0,170);
+        gradientFill.addColorStop(1, "rgba(231, 115, 233, 1)");
+        gradientFill.addColorStop(0, "rgba(133, 104, 243, 0.5)");
+
+        var myChart0 = new Chart(ctx0, {
+            responsive: true,
+            type: 'line',
+            data: {
+                labels: [6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24],
+                datasets: [{
+                    borderColor:            "rgba(0,0,0,0)",
+                    fill:                   true,
+                    backgroundColor:        gradientFill,
+                    data:                   [0,0,0,0,0,0,0,0, 1, 2, 3, 4, 5, 4, 5, 7, 6, 7, 6, 7] },
+                    {
+                    borderColor:            "rgba(0,0,0,0)",
+                    fill:                   true,
+                    backgroundColor:        gradientFill,
+                    data:                   [0,0,0,0,0,0, 1, 3, 4, 5, 7,8,6,5,2,1,2,1, 2, 0] },
+                ]
+            },
+            options: {
+                legend:                 { display: false},
+                scales:                 { yAxes: [{ display: false }], xAxes: [{ display: false }]},
+                elements:               { point: { radius: 0 } },
+                maintainAspectRatio:    false,
+            }
+        });
+    </script>
+
 
 {% endblock %}
