--- a/app/templates/register_success.html
+++ b/app/templates/register_success.html
@@ -1,12 +1,81 @@
 {% extends "base.html" %}
+{% from "macros.html" import nav_bar_dash, mathquill, katex %}
 
-{% block title %}EduAce Registration{% endblock %}
+{% block title %}EduAce Quiz{% endblock %}
 
 {% block body %}
 
-    <h3>Registration was a success!</h3>
-    <h3>An email has been sent to your email address with a confirmation link.</h3>
-    <h4>Please confirm your email address before signing in.</h4>
-    <a href="login"><h3>Login...</h3></a>
+    <!-- Static Desktop Sidebar -->
+    <div class="col-md-1 sidebar">
+
+        <!-- Logo Row -->
+        <div class="sidebar-div text-center">
+            <img class="sidebar-image" src="{{ url_for('static', filename='logo.png') }}">
+        </div>
+
+    </div>
+
+    <!-- spacer -->
+    <div class="col-md-1"></div>
+
+    <!-- Probably want to centre this -->
+
+    <!-- registration -->
+    <div id="registration-content" class="col-md-9">
+    <br><br><br><br><br><br><br><br>
+        <div class="row">
+
+            <div class="container content-register rounded">
+                <canvas id="register-graph"></canvas>
+
+                <div class="col-md-6">
+                <br>
+
+                    <h3>Registration was a success!</h3>
+                    <br>
+                    <h3>Please confirm you email address before logging in</h3>
+                    <br>
+                    <a href="/login"><button class="btn btn-outline-light">Login</button></a>
+
+                </div>
+
+            </div>
+
+        </div
+    </div>
+
+    <script>
+        var ctx0 = document.getElementById('register-graph').getContext("2d")
+
+        var gradientFill = ctx0.createLinearGradient(0,0,0,170);
+        gradientFill.addColorStop(1, "rgba(231, 115, 233, 1)");
+        gradientFill.addColorStop(0, "rgba(133, 104, 243, 0.5)");
+
+        var myChart0 = new Chart(ctx0, {
+            responsive: true,
+            type: 'line',
+            data: {
+                labels: [6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24],
+                datasets: [{
+                    borderColor:            "rgba(0,0,0,0)",
+                    fill:                   true,
+                    backgroundColor:        gradientFill,
+                    data:                   [0,0,0,0,0,0,0,0, 1, 2, 3, 4, 5, 4, 5, 7, 6, 7, 6, 7] },
+                    {
+                    borderColor:            "rgba(0,0,0,0)",
+                    fill:                   true,
+                    backgroundColor:        gradientFill,
+                    data:                   [0,0,0,0,0,0, 1, 3, 4, 5, 7,8,6,5,2,1,2,1, 2, 0] },
+                ]
+            },
+            options: {
+                legend:                 { display: false},
+                scales:                 { yAxes: [{ display: false }], xAxes: [{ display: false }]},
+                elements:               { point: { radius: 0 } },
+                maintainAspectRatio:    false,
+            }
+        });
+    </script>
+
 
 {% endblock %}
