--- a/web/src/components/App.scss
+++ b/web/src/components/App.scss
@@ -14,6 +14,10 @@ body {
   min-height: 100vh;
 }
 
+.eduace-content-container {
+    grid-column: 3 / 10;
+}
+
 .eduace-app-sidebar {
   display: flex;
   justify-content: center;
