--- a/web/src/components/App.scss
+++ b/web/src/components/App.scss
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+
+$base-font: 'Open Sans', sans-serif;
+
 $bg-color: rgb(245, 246, 250);
+$eduace-gray: rgb(160, 160, 160);
 
 html {
   background-color: $bg-color;
+  font-family: $base-font;
 }
 
 body {
@@ -27,11 +33,22 @@ body {
 
 .eduace-sidebar-logo {
   margin-top: 3em;
-  width: 5em;
-  height: 5em;
+  width: 3em;
+  height: 3em;
   background-color: $bg-color;
   border-color: $bg-color;
   border-width: 0.5em;
   border-style: solid;
   border-radius: 100%
+}
+
+.eduace-header-container {
+  margin-top: 1em;
+  float: right;
+  color: $eduace-gray;
+}
+
+.eduace-header-container h1 {
+    font-weight: lighter;
+    letter-spacing: 0.3em;
 }
