--- a/web/src/components/Question.scss
+++ b/web/src/components/Question.scss
@@ -7,6 +7,7 @@ $gradient: linear-gradient(60deg, $gradient-1, $gradient-2);
   border-radius: 1em;
   padding: 4em;
   margin-bottom: 2em;
+  margin-top: 2em;
   min-height: 6em;
   color: white;
 }
