buttons no longer kissing

--- a/web/src/components/Question.scss
+++ b/web/src/components/Question.scss
@@ -12,6 +12,11 @@ $gradient: linear-gradient(60deg, $gradient-1, $gradient-2);
   color: white;
 }
 
+.eduace-button-submit {
+  float: left;
+  margin-right: 1em;
+}
+
 .katex {
   font-size: 2em !important;
 }
