--- a/web/src/components/App.scss
+++ b/web/src/components/App.scss
@@ -4,6 +4,7 @@ $base-font: 'Inter', sans-serif;
 
 $bg-color: rgb(245, 246, 250);
 $eduace-gray: rgb(160, 160, 160);
+$eduace-darkgray: rgb(96, 96, 96);
 
 html {
   background-color: $bg-color;
